--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,7 +11,7 @@
 }
 
 .site-title {
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 300;
     line-height: 56px;
     letter-spacing: -1px;
@@ -22,6 +22,15 @@
     &:visited {
         color: $grey-color-dark;
     }
+}
+
+.site-desc {
+  color: #666;
+  padding-left: 20px;
+  padding-top: 21px;
+  font-size: 14px;
+  font-weight: 300;
+  float: left;
 }
 
 .site-nav {
@@ -113,6 +122,11 @@
     margin-left: 0;
 }
 
+.contact-list > li {
+  display: inline;
+  padding-right: 20px;
+}
+
 .footer-col-wrapper {
     font-size: 15px;
     color: $grey-color;
@@ -180,18 +194,19 @@
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit;
+        margin-bottom: $spacing-unit / 3;
     }
 }
 
 .post-meta {
+    padding-left: $spacing-unit;
     font-size: $small-font-size;
     color: $grey-color;
 }
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 
@@ -202,9 +217,15 @@
 .post-header {
     margin-bottom: $spacing-unit;
 }
+.post-list > li:before {
+  content: '>';
+  font-size: 14px;
+  color: #999;
+}
+
 
 .post-title {
-    font-size: 42px;
+    font-size: 32px;
     letter-spacing: -1px;
     line-height: 1;
 
@@ -239,4 +260,21 @@
             font-size: 18px;
         }
     }
+}
+
+.tag-list {
+  margin-left: 0;
+
+  .tag-item {
+    display: inline;
+  }
+  a {
+    text-decoration: none;
+  }
+  a:before {
+    content: '○';
+    font-size: 10px;
+    padding: 4px 4px;
+    color: #999;
+  }
 }
