--- a/fav/zss/profile.css
+++ b/fav/zss/profile.css
@@ -1,8 +1,13 @@
+body {
+	font-family: Tahoma;
+}
+
 .container {
 	margin: 25px auto;
+	padding: 0 100px;
 	width: 800px;
 	height: auto;
-	border: 1px solid #eee;
+	// border: 1px solid #eee;
 }
 
 .basic {
@@ -41,8 +46,9 @@
 
 .row > .title {
 	margin-bottom: 15px;
-	font-size: 1.2em;
-	line-height: 1.5em;
+	font-size: 1.3em;
+	line-height: 1.6em;
+	font-weight: bold;
 	border-bottom: 3px solid #aaa;
 }
 
@@ -66,8 +72,17 @@
 }
 
 .content-block > span {
+	display: inline-block;
+}
+
+.col3 > span {
 	width: 32%;
 	// text-align: left;
+	display: inline-block;
+}
+
+.col2 > span {
+	width: 49%;
 	display: inline-block;
 }
 
@@ -85,5 +100,16 @@
 
 .intent2 {
 	text-indent: 2em;
+}
+ul {
+	padding-left: 20px;
+}
+ul.detail {
+	color: #999;
+	font-size: 0.8em;
+}
+
+.subtitle {
+	width: 140px;
 }
 
