--- a/fav/zss/profile.css
+++ b/fav/zss/profile.css
@@ -38,7 +38,7 @@ body {
 }
 
 .row {
-	padding-top: 15px;
+	padding-top: 12px;
 	width: 100%;
 	height: auto;
 	clear: both;
@@ -58,7 +58,7 @@ body {
 
 .block {
 	width: 100%;
-	padding: 5px 0 5px 5px;
+	padding: 5px 0 2px 5px;
 }
 
 .block > .time {
@@ -98,14 +98,20 @@ body {
 	padding-left: 0;
 }
 
+.pl5 {
+	padding-left: 5px;
+}
+
 .intent2 {
 	text-indent: 2em;
 }
 ul {
+	margin-bottom: 0;
+    margin-top: 10px;
 	padding-left: 20px;
 }
 ul.detail {
-	color: #999;
+	color: #777;
 	font-size: 0.9em;
 	line-height: 1.5em;
 }
@@ -114,3 +120,23 @@ ul.detail {
 	width: 140px;
 }
 
+.txt20 {
+	font-size: 20px;
+}
+
+.fav-detail {
+    display: inline-block;
+    margin: 3px 0;
+	font-size: 13px;
+    line-height: 1.5em;
+    color: #555;
+    font-weight: 600;
+}
+
+.en-title {
+	font-style: italic;
+}
+
+.evaluation ul {
+	font-weight: 300;
+}
